5.0a1 -> 5.0a2:
    - afb: upgrade internal rsyncable zlib, from 1.2.2.4 to 1.2.3
    - jbj: fix: segfault with corrupted rpm reported at
	http://qa.mandriva.com/show_bug.cgi?id=33735
    No change needed to rpm-5.0 whatsoever:
	   % rpm -K rep-gtk-debug-0.18-6mdv2008.0.x86_64.rpm 
	   error: /tmp/rep-gtk-debug-0.18-6mdv2008.0.x86_64.rpm: Header: region trailer: BAD, tag 63 type 7 offset 848 count 1524040208
    - jbj: handle --root/--dbpath variants, with/without URL, using --rebuilddb.
    - jbj: rpmdb: casts for integral conversions.
    - jbj: lib: identify and repair several minor flaws caught by splint.
    - jbj: rpmio: casts for integral conversions.
    - jbj: rpmio: casts for character <-> integral conversions.
    - jbj: first pass through header.c converting to uint32_t everywhere.
    - jbj: get rid of splint spew before chasing header.c integers.
    - jbj: use splint to check integral types, eliminate the easy stuff.
    - jbj: splint fiddles for rpmdb.
    - jbj: don't cache unsatisfied Suggests:.
    - jbj: fix the last memory leak with -Kvv, recheck install/query paths.
    - jbj: functional -Kvv *.xar header-only DSA verify.
    - jbj: disable tagTypeValidate on --addsig and --delsig paths.
    - jbj: remap rpmlog levels to status quo ante.
    - jbj: functional -Kvv *.xar header SHA1 and header+payload MD5 verify.
    - jbj: eliminate all but 1 of the memory leaks with -Kvv *.xar.
    - jbj: add he->signature tagTypeValidate disabler, sigtags no workie.
    - jbj: add (tenative) patch to handle cached chroot paths.
    - jbj: change %system to --with-xar=internal, adding xar_* to loader map.
    - jbj: hmmm, markReplacedFiles() breaks here, todo++. noone will notice.
    - jbj: eliminate headerGetEntryMinMemory(), use headerGet{Entry,Extension}.
    - jbj: invent pubkey/pubkey arch/os convention to avoid missing value pain.
    - jbj: use RPM_I18NSTRING_TYPE where needed for pubkey imports.