@@ -60,11 +60,6 @@
     - jbj: C++ and C have different rules regarding typedef'd enums like rpmTag.
 	The definitions and usage are currently split awkwardly between
 	rpmtag.h and header.h.
-    - jbj: Heh, --import has *always* used the wrong data type for
-	Summary/Description/Group. The header that carries the pubkey
-	lacks RPMTAG_ARCH/RPMTAG_OS as well. Re-importing all pubkeys is
-	one solution, but perhaps a "just works" slam-dunk hack is needed
-	during --rebuildb, or with header extensions.
     - jbj: markReplacedFiles() subtly rewrites header back into rpmdb
 	with altered RPMTAG_FILESTATES data. get/del/add sequence
 	is needed instead.
@@ -78,3 +73,12 @@
   o to be resolved before RPM 5.0.0:
     - rse: NEWS polishing
 
+  RPM 5.1 ROADMAP ISSUES
+  ----------------------
+    - jbj: Heh, --import has *always* used the wrong data type for
+	Summary/Description/Group. The header that carries the pubkey
+	lacks RPMTAG_ARCH/RPMTAG_OS as well. Re-importing all pubkeys is
+	one solution, but perhaps a "just works" slam-dunk hack is needed
+	during --rebuildb, or with header extensions. When this issue is
+	resolved, then rpm can/should use implicit, rather than explicit, data
+	types for tag data.
