@@ -101,6 +101,7 @@ struct headerToken_s {
 #define	HEADERFLAG_ALLOCATED	(1 << 1) /*!< Is 1st header region allocated? */
 #define	HEADERFLAG_LEGACY	(1 << 2) /*!< Header came from legacy source? */
 #define HEADERFLAG_DEBUG	(1 << 3) /*!< Debug this header? */
+#define HEADERFLAG_SIGNATURE	(1 << 4) /*!< Signature header? */
 /*@refs@*/
     int nrefs;			/*!< Reference count. */
 };
