@@ -582,9 +582,7 @@ static int makeHDRSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_STRING_TYPE;
 	he->p.str = SHA1;
 	he->c = 1;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	SHA1 = _free(SHA1);
 	if (!xx)
 	    goto exit;
@@ -609,9 +607,7 @@ static int makeHDRSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_BIN_TYPE;
 	he->p.ptr = pkt;
 	he->c = pktlen;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	if (!xx)
 	    goto exit;
 	ret = 0;
@@ -636,9 +632,7 @@ static int makeHDRSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_BIN_TYPE;
 	he->p.ptr = pkt;
 	he->c = pktlen;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	if (!xx)
 	    goto exit;
 	ret = 0;
@@ -677,9 +671,7 @@ int rpmAddSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_UINT32_TYPE;
 	he->p.ui32p = &pktlen;
 	he->c = 1;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	if (!xx)
 	    break;
 	ret = 0;
@@ -693,9 +685,7 @@ int rpmAddSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_BIN_TYPE;
 	he->p.ptr = pkt;
 	he->c = pktlen;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	if (!xx)
 	    break;
 	ret = 0;
@@ -710,9 +700,7 @@ int rpmAddSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_BIN_TYPE;
 	he->p.ptr = pkt;
 	he->c = pktlen;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	if (!xx)
 	    break;
 	/* XXX Piggyback a header-only RSA signature as well. */
@@ -731,9 +719,7 @@ int rpmAddSignature(Header sigh, const char * file, uint32_t sigTag,
 	he->t = RPM_BIN_TYPE;
 	he->p.ptr = pkt;
 	he->c = pktlen;
-	he->signature = 1;
 	xx = hae(sigh, he, 0);
-	he->signature = 0;
 	if (!xx)
 	    break;
 	/* XXX Piggyback a header-only DSA signature as well. */
