@@ -272,6 +272,7 @@ static unsigned int _tagValue(const char * tagstr)
     return 0xffffffff;	/* XXX arbitrary tags */
 }
 
+#if defined(SUPPORT_IMPLICIT_TAG_DATA_TYPES)
 /**
  * Validate that implicit and explicit types are identical.
  * @param he		tag container
@@ -284,3 +285,4 @@ if (!(he->tag == 261 || he->tag == 269))
 if ((tagType(he->tag) & 0xffff) != he->t)
 fprintf(stderr, "==> warning: tag %u type(0x%x) != implicit type(0x%x)\n", (unsigned) he->tag, he->t, tagType(he->tag));
 }
+#endif
